--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -1,6 +1,11 @@
 {
   "index": "/index.html",
-  "appData": {"title": "Update Available", "description": "Updated libraries & organized push notifications. Add configurations.", "version": "1.8.0", "askToUpdate": true},
+  "appData": {
+    "title": "Update Available",
+    "description": "Updated libraries & organized push notifications. Add configurations.",
+    "version": "0.0.1",
+    "askToUpdate": true
+  },
   "assetGroups": [{
     "name": "app",
     "installMode": "prefetch",
