--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "was-tutorial",
+  "name": "wickeyappstore-phaserce",
   "version": "1.8.0",
   "license": "MIT",
   "scripts": {
@@ -16,7 +16,7 @@
     "sw": "sw-precache --root=dist --config=sw-precache-config.js && npm run updatesw",
     "build:aot": "ng build --aot --prod --build-optimizer",
     "build:all": "npm run build:aot && npm run updatesw",
-    "build:github": "ng build --aot --prod --build-optimizer --progress false --base-href \"/was-tutorial/\"",
+    "build:github": "ng build --aot --prod --build-optimizer --progress false --base-href \"/wickeyappstore-phaserce/\"",
     "deploy": "./deploy.sh"
   },
   "private": true,
@@ -32,11 +32,10 @@
     "@angular/platform-browser-dynamic": "5.2.9",
     "@angular/router": "5.2.9",
     "@angular/service-worker": "5.2.9",
-    "@types/howler": "^2.0.5",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "howler": "^2.0.9",
     "idb-keyval": "^3.0.2",
+    "phaser-ce": "^2.10.3",
     "rxjs": "^5.5.9",
     "swiper": "3.4.2",
     "web-animations-js": "^2.3.1",
@@ -49,7 +48,7 @@
     "@angular/language-service": "5.2.9",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~9.6.4",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "http-server": "^0.11.1",
     "jasmine-core": "~2.6.2",
